Add deploy step

--- a/.drone.yml
+++ b/.drone.yml
@@ -13,6 +13,6 @@ steps:
       - latest
       - '1.0.1'
       - '1.0'
-- name: deploy
+- name: deploy-to-heroku
   commands:
     - /bin/bash deploy_heroku.sh
