Add docker secrets

--- a/.drone.yml
+++ b/.drone.yml
@@ -4,8 +4,10 @@ steps:
 - name: docker  
   image: plugins/docker
   settings:
-    username: ${DOCKER_USER}
-    password: ${DOCKER_PASS}
+    username:
+      from_secret: DOCKER_USER
+    password:
+      from_secret: DOCKER_PASS
     repo: ashokshingade24/caching
     tags:
       - latest
