--- a/.drone.yml
+++ b/.drone.yml
@@ -13,7 +13,8 @@ steps:
       - latest
       - '1.0.1'
       - '1.0'
-deploy:
-  heroku:
-    app: pure-fjord-93329 
-    force: true
+- name: deploy
+  deploy:
+    heroku:
+      app: pure-fjord-93329 
+      force: true
