--- a/.drone.yml
+++ b/.drone.yml
@@ -17,5 +17,5 @@ steps:
   image: plugins/slack
   settings:
     webhook:
-      from_secret: slack_webhook
-    channel: dev
+      from_secret: jatin
+    channel: jb008
