Change Slack Webhook

--- a/.drone.yml
+++ b/.drone.yml
@@ -17,5 +17,5 @@ steps:
   image: plugins/slack
   settings:
     webhook:
-      from_secret: jatin
-    channel: jb008
+      from_secret: slack_webhook
+    channel: dev
